[[bin]]
name = "polkadot"
path = "src/main.rs"

[package]
name = "polkadot"
description = "Implementation of a `https://polkadot.network` node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
version = "0.9.18"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
rust-version = "1.57.0" # custom profiles
readme = "README.md"


[workspace]
members = [
    "node/*",
    "pallets/template",
    "runtime",
]


[dependencies]
polkadot-cli = { path = "node/cli", features = [ "kusama-native" ]  }
color-eyre = { version = "0.6.1", default-features = false }
parity-util-mem = { version = "0.11.0", default-features = false, features = ["jemalloc-global"] }

[dev-dependencies]
assert_cmd = "2.0.4"
nix = "0.23.1"
tempfile = "3.2.0"
tokio = "1.17.0"
remote-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot.git", tag = "v0.9.18" }


[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[features]
runtime-benchmarks= [ "polkadot-cli/runtime-benchmarks" ]
try-runtime = [ "polkadot-cli/try-runtime" ]
fast-runtime = [ "polkadot-cli/fast-runtime" ]
runtime-metrics = [ "polkadot-cli/runtime-metrics" ]
pyroscope = ["polkadot-cli/pyroscope"]




